feat: downgrade to language level 8
Minecraft 1.8 compatibility :(